--- a/index.html
+++ b/index.html
@@ -13,21 +13,26 @@
 <body>
   <div class="container">
     <div class="top">
-      <img src="./images/bg-pattern-top.svg" alt="">
     </div>
 
-    Victor Crest
-    26
-    London
+    <div class="profile">
+      <picture class="prof-img">
+        <img src="./images/image-victor.jpg" alt="">
+      </picture>
 
-    80K
-    Followers
+      <h3> Victor Crest <span>26</span></h3>
+     <p> London</p>
+    </div>
+    
+    <div class="feed">
+      <ul>
+        <li>80K <span>Followers</span></li>
 
-    803K
-    Likes
+        <li>803K <span>Likes</span></li>
 
-    1.4K
-    Photos
+        <li>1.4K <span>Photos</span></li>
+      </ul>
+    </div>
   </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
