--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
   <div class="container">
     <div class="top">
+      <img src="./images/bg-pattern-card.svg" alt="">
     </div>
 
     <div class="profile">
