update html list to tables
changed the unordered list to tables  for easier styling

--- a/index.html
+++ b/index.html
@@ -11,29 +11,36 @@
   
 </head>
 <body>
-  <div class="container">
-    <div class="top">
-      <img src="./images/bg-pattern-card.svg" alt="">
-    </div>
-
-    <div class="profile">
-      <picture class="prof-img">
-        <img src="./images/image-victor.jpg" alt="">
-      </picture>
-
-      <h3> Victor Crest <span>26</span></h3>
-     <p> London</p>
-    </div>
-    
-    <div class="feed">
-      <ul>
-        <li>80K <span>Followers</span></li>
-
-        <li>803K <span>Likes</span></li>
-
-        <li>1.4K <span>Photos</span></li>
-      </ul>
-    </div>
+  <main>
+    <div class="container">
+      <div class="top">
+        <img src="./images/bg-pattern-card.svg" alt="">
+      </div>
+  
+      <div class="profile">
+        <picture class="prof-img">
+          <img src="./images/image-victor.jpg" alt="">
+        </picture>
+  
+        <h3> Victor Crest <span>26</span></h3>
+       <p> London</p>
+      </div>
+  
+     <hr>
+  
+     <table>
+        <tr class="stats">
+          <th>80K</th>
+          <th>803K</th>
+          <th> 1.4K</th>
+        </tr>
+        <tr class="name">
+          <td>Followers</td>
+          <td>Likes</td>
+          <td>Photos</td>
+        </tr>
+    </table>
+  </main>
   </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
