--- a/index.html
+++ b/index.html
@@ -42,9 +42,11 @@
     </table>
   </main>
   </div>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Mary Njoroge</a>.
-  </div>
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Mary Njoroge</a>.
+    </div>
+  </footer>
 </body>
 </html>
